--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "multer": "^2.0.2",
-    "serverless": "^4.18.2"
+    "serverless": "^4.18.2",
+    "serverless-http": "^4.0.0"
   }
 }
